# alien

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build-windows-ninja.bat  deploy.bat  imgui.ini  vcpkg.json
source/Base/: AlienExceptions.cpp  AlienExceptions.h  CMakeLists.txt  Cache.h  Check.cpp  Check.h  Definitions.h  Exceptions.cpp  Exceptions.h  FileLogger.cpp  FileLogger.h  GlobalSettings.cpp  GlobalSettings.h  Hashes.h  JsonParser.h  KernelProfiler.cpp  KernelProfiler.h  LoggingService.cpp  LoggingService.h  Macros.h  Math.cpp  Math.h  MathTypes.cpp  MathTypes.h  Physics.h  Resources.h  StringHelper.cpp  StringHelper.h  Vector2D.h  VersionParserService.cpp  VersionParserService.h
source/EngineGpuKernels/: Array.cuh  AttackerProcessor.cuh  Base.cuh  BufferData.cu  BufferData.cuh  CMakeLists.txt  CellConnectionProcessor.cuh  CellProcessor.cuh  ClusterProcessor.cuh  CollectionTOProvider.cu  CommunicatorProcessor.cuh  ConstantMemory.cu  ConstantMemory.cuh  Constants.cuh  ConstructorHelper.cuh  ConstructorProcessor.cuh  ConstructorProcessor_new.cuh  Creature.cuh  CreatureTO.cuh  CudaCollectionTOProvider.cu  CudaGeometryBuffers.cu  CudaGeometryBuffers.cuh  CudaMemoryManager.cuh  CudaNumberGenerator.cuh  CudaRenderBuffers.cuh  CudaShapeGenerator.cuh  CudaTOProvider.cu  CudaTOProvider.cuh  DataAccessKernels.cu  DataAccessKernels.cu.bak  DataAccessKernels.cuh  DataAccessKernels.cuh.bak  DataAccessKernelsService.cu  DataAccessKernelsService.cu.bak  DataAccessKernelsService.cuh  DataAccessKernelsService.cuh.bak  DebugKernels.cu  DebugKernels.cuh  Definitions.cuh  Definitions.h  (+95 more)
source/EngineImpl/: CMakeLists.txt  DataAccessKernelsService.cu  DataAccessKernelsService.cuh  DataAccessKernelsService.h  DescConverterService.cpp  DescConverterService.h  DescriptionConverterService.cpp  DescriptionConverterService.h  EditKernelsService.cu  EditKernelsService.cuh  EditKernelsService.h  EngineWorker.cpp  EngineWorker.cpp.bak  EngineWorker.h  GarbageCollectorKernelsService.cu  GarbageCollectorKernelsService.cuh  GarbageCollectorKernelsService.h  GeometryKernelsService.cu  GeometryKernelsService.cuh  GeometryKernelsService.h  PreviewDescriptionConverterService.cpp  PreviewDescriptionConverterService.h  SelectionKernelsService.cu  SelectionKernelsService.cuh  SelectionKernelsService.h  SimulationCudaFacade.cu  SimulationCudaFacade.cuh  SimulationCudaFacade.h  SimulationFacadeImpl.cpp  SimulationFacadeImpl.cpp.bak  SimulationFacadeImpl.h  SimulationFacadeImpl.h.bak  SimulationFacadeRegistration.cpp  SimulationFacadeRegistration.h  SimulationKernelsService.cu  SimulationKernelsService.cuh  SimulationKernelsService.h  SimulationParametersUpdateService.cu  SimulationParametersUpdateService.cuh  SimulationParametersUpdateService.h  (+9 more)
source/EngineInterface/: ArraySizesForGpu.h  ArraySizesForGpuEntities.h  ArraySizesForTO.h  ArraySizesForTOs.h  CMakeLists.txt  CellTypeConstants.h  CellTypeStrings.h  Colors.h  CpuGeometryBuffers.h  CreatureDescription.cpp  CreatureDescription.h  CreatureDescriptionEditService.cpp  CreatureDescriptionEditService.h  CreatureDescriptionInfoService.cpp  CreatureDescriptionInfoService.h  CreatureDescriptionValidationService.cpp  CreatureDescriptionValidationService.h  CudaSettings.h  DataPointCollection.cpp  DataPointCollection.h  Definitions.h  Desc.cpp  Desc.h  DescEditService.cpp  DescEditService.h  DescValidationService.cpp  DescValidationService.h  Description.cpp  Description.h  DescriptionEditService.cpp  DescriptionEditService.cpp.bak2  DescriptionEditService.h  DescriptionEditService.h.bak  Descriptions.cpp  Descriptions.h  EngineConstants.h  GenomeDesc.cpp  GenomeDesc.h  GenomeDescEditService.cpp  GenomeDescEditService.h  (+67 more)
source/EngineInterfaceTests/: CMakeLists.txt  DescEditServiceTests.cpp  GenomeDescEditServiceTests.cpp  GenomeDescInfoServiceTests.cpp  GenomeDescriptionEditServiceTests.cpp  GenomeDescriptionInfoServiceTests.cpp  MacrosTests.cpp  ParametersEditServiceTests.cpp  PreviewDescConverterServiceTests.cpp  PreviewDescriptionConverterServiceTests.cpp  SpecificationFilterServiceTests.cpp  TestFramework.h
source/EngineTestData/: CMakeLists.txt  DescTestDataFactory.cpp  DescTestDataFactory.h  DescriptionTestDataFactory.cpp  DescriptionTestDataFactory.h  TestDataFactory.h  TestHelper.cpp  TestHelper.h
source/EngineTests/: AccumulatedMutationTests.cpp  AddNodeMutationTests.cpp  AppendNodeMutationTests.cpp  AttackerTests.cpp  BalanceTests.cpp  CMakeLists.txt  CellConnectionTests.cpp  CellStateTransitionTests.cpp  CellStateTransitionTests.cpp.bak  CellStateTransitionTests_New.cpp  CellTypeModeMutationTests.cpp  CellTypeMutationCoverageGuard.cpp  CellTypeMutationTests.cpp  CellTypePropertiesMutationTests.cpp  CommunicatorTests.cpp  ConnectionMutationTests.cpp  ConstructorMutationTests.cpp  ConstructorTests.cpp  ConstructorTests_New.cpp  CreatureDescriptionEditServiceTests.cpp  CreatureDescriptionInfoServiceTests.cpp  CreatureTests.cpp  CreatureTests.cpp.bak  DataTransferTests.cpp  DataTransferTests.cpp.bak  DataTransferTests_New.cpp  DefenderTests.cpp  DefenderTests.cpp.bak  DeleteGeneMutationTests.cpp  DeleteNodeMutationTests.cpp  DepotTests.cpp  DescriptionEditServiceTests.cpp  DescriptionEditTests.cpp  DescriptionEditTests_New.cpp  DetonatorTests.cpp  DetonatorTests.cpp.bak  DigestorTests.cpp  DuplicateGeneMutationTests.cpp  EditTests.cpp  EnergyFlowTests.cpp  (+49 more)
source/Gui/: AboutDialog.cpp  AboutDialog.h  ActivateUserDialog.cpp  ActivateUserDialog.h  AlienDialog.cpp  AlienDialog.h  AlienGui.cpp  AlienGui.h  AlienWindow.cpp  AlienWindow.h  AutosaveWindow.cpp  AutosaveWindow.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  ChangeColorDialog.cpp  ChangeColorDialog.h  CreateUserDialog.cpp  CreateUserDialog.h  CreatorWindow.cpp  CreatorWindow.cpp.bak  CreatorWindow.h  CreatureEditorWindow.cpp  CreatureEditorWindow.h  CreaturePreviewWidget.cpp  CreaturePreviewWidget.h  CreatureTabEditData.h  CreatureTabWidget.cpp  CreatureTabWidget.h  Definitions.h  DelayedExecutionController.cpp  DelayedExecutionController.h  DeleteUserDialog.cpp  (+163 more)
(+348 files in other folders)
